[gd_scene load_steps=4 format=3 uid="uid://cpicmd3ka8vva"]

[ext_resource type="Script" path="res://scenes/spy_centers.gd" id="1_5n4o1"]
[ext_resource type="Texture2D" uid="uid://cmihopck0gbdo" path="res://res/spy_center.png" id="1_u3exb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7imxx"]
radius = 17.1172

[node name="spy_centers" type="Node2D"]
script = ExtResource("1_5n4o1")

[node name="SpyCenter" type="Sprite2D" parent="."]
modulate = Color(0.294118, 0.4, 0.568627, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_u3exb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7imxx")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
